--- a/platform/inga/Makefile.inga
+++ b/platform/inga/Makefile.inga
@@ -13,29 +13,29 @@ INGA_SOURCEFILES += $(INGA_INTERFACES) $(INGA_DRIVERS) $(INGA_SENSORS) $(INGA_PR
 
 ifeq ($(REV),)
   $(info INGA revison not set, defaults to REV=1.4)
-  CFLAGS += -DINGA_CONF_REVISION=INGA_V14
+  override CFLAGS += -DINGA_CONF_REVISION=INGA_V14
   REV = 1.4
 else ifeq ($(REV),1.2)
-  CFLAGS += -DINGA_CONF_REVISION=INGA_V12
+  override CFLAGS += -DINGA_CONF_REVISION=INGA_V12
 else ifeq ($(REV),1.4)
-  CFLAGS += -DINGA_CONF_REVISION=INGA_V14
+  override CFLAGS += -DINGA_CONF_REVISION=INGA_V14
 else ifeq ($(REV),1.5)
-  CFLAGS += -DINGA_CONF_REVISION=INGA_V15
+  override CFLAGS += -DINGA_CONF_REVISION=INGA_V15
 else ifeq ($(REV),1.6)
-  CFLAGS += -DINGA_CONF_REVISION=INGA_V16
+  override CFLAGS += -DINGA_CONF_REVISION=INGA_V16
 else ifeq ($(REV),2.0)
-  CFLAGS += -DINGA_CONF_REVISION=INGA_V20
+  override CFLAGS += -DINGA_CONF_REVISION=INGA_V20
 endif
 
 
 # Enable SLIP support
 INGA_SOURCEFILES += slip_uart0.c
-CFLAGS += -DINGA_CONF_WITH_SLIP=1
+override CFLAGS += -DINGA_CONF_WITH_SLIP=1
 
 CONTIKI_TARGET_SOURCEFILES += $(INGA_SOURCEFILES)
 
 # Enable settings manager
-CFLAGS += -DCONTIKI_CONF_SETTINGS_MANAGER=1
+override CFLAGS += -DCONTIKI_CONF_SETTINGS_MANAGER=1
 
 # TODO: find a better solution for diskio.c
 CONTIKI_TARGET_SOURCEFILES += cfs-coffee-arch.c
@@ -82,7 +82,7 @@ endif # COFFEE_DEVICE
 
 
 ifdef COFFEE_ADDRESS
-  CFLAGS += -DCOFFEE_DEVICE=$(COFFEE_DEVICE) -DCOFFEE_ADDRESS=$(COFFEE_ADDRESS)
+  override CFLAGS += -DCOFFEE_DEVICE=$(COFFEE_DEVICE) -DCOFFEE_ADDRESS=$(COFFEE_ADDRESS)
   # NOTE: This is only for the makefsdata tool
   ifneq ($(COFFEE_ADDRESS), COFFEE_DEFAULT_ADDR)
     LDFLAGS+= -Wl,--section-start=.coffeefiles=$(COFFEE_ADDRESS)
@@ -154,7 +154,7 @@ AVRDUDE_BITBANG_PROGRAMMER=inga
 ifndef INGA_CONF_BAUDRATE
   INGA_CONF_BAUDRATE = 38400
 endif
-CFLAGS+=-DINGA_CONF_USART_BAUD=USART_BAUD_$(INGA_CONF_BAUDRATE)
+override CFLAGS+=-DINGA_CONF_USART_BAUD=USART_BAUD_$(INGA_CONF_BAUDRATE)
 
 ifdef MOTES
   MOTELIST=1
