--- a/Makefile.include
+++ b/Makefile.include
@@ -59,7 +59,7 @@ OBJECTDIR = obj_$(TARGET)
 LOWERCASE = -abcdefghijklmnopqrstuvwxyz
 UPPERCASE = _ABCDEFGHIJKLMNOPQRSTUVWXYZ
 TARGET_UPPERCASE := ${strip ${shell echo $(TARGET) | sed y!$(LOWERCASE)!$(UPPERCASE)!}}
-CFLAGS += -DCONTIKI=1 -DCONTIKI_TARGET_$(TARGET_UPPERCASE)=1
+override CFLAGS += -DCONTIKI=1 -DCONTIKI_TARGET_$(TARGET_UPPERCASE)=1
 
 MODULES += core/sys core/dev core/lib
 
@@ -68,19 +68,19 @@ MODULES += core/sys core/dev core/lib
 HAS_STACK = 0
 ifeq ($(CONTIKI_WITH_IPV4),1)
   HAS_STACK = 1
-  CFLAGS += -DNETSTACK_CONF_WITH_IPV4=1
+  override CFLAGS += -DNETSTACK_CONF_WITH_IPV4=1
   MODULES += core/net/ipv4 core/net/ip
 endif
 
 ifeq ($(CONTIKI_WITH_RIME),1)
   HAS_STACK = 1
-  CFLAGS += -DNETSTACK_CONF_WITH_RIME=1 
+  override CFLAGS += -DNETSTACK_CONF_WITH_RIME=1 
   MODULES += core/net/rime
 endif
 
 ifeq ($(CONTIKI_WITH_DTN),1)
   HAS_STACK = 1
-  CFLAGS += -DNETSTACK_CONF_WITH_DTN=1 
+  override CFLAGS += -DNETSTACK_CONF_WITH_DTN=1 
   MODULES += core/net/uDTN
 include $(CONTIKI)/core/net/uDTN/Makefile.dtn
 endif
@@ -93,7 +93,7 @@ endif
 endif
 
 ifeq ($(CONTIKI_WITH_IPV6),1)
-  CFLAGS += -DNETSTACK_CONF_WITH_IPV6=1
+  override CFLAGS += -DNETSTACK_CONF_WITH_IPV6=1
   ifneq ($(CONTIKI_WITH_RPL),0)
   	CONTIKI_WITH_RPL = 1
   endif
@@ -101,10 +101,10 @@ ifeq ($(CONTIKI_WITH_IPV6),1)
 endif
 
 ifeq ($(CONTIKI_WITH_RPL),1)
-    CFLAGS += -DUIP_CONF_IPV6_RPL=1
+    override CFLAGS += -DUIP_CONF_IPV6_RPL=1
     MODULES += core/net/rpl
 else
-    CFLAGS += -DUIP_CONF_IPV6_RPL=0
+    override CFLAGS += -DUIP_CONF_IPV6_RPL=0
 endif
 
 CONTIKI_SOURCEFILES += $(CONTIKIFILES)
@@ -179,7 +179,7 @@ endif
 ### Forward comma-separated list of arbitrary defines to the compiler
 
 COMMA := ,
-CFLAGS += ${addprefix -D,${subst $(COMMA), ,$(DEFINES)}}
+override CFLAGS += ${addprefix -D,${subst $(COMMA), ,$(DEFINES)}}
 
 ### Setup directory search path for source and header files
 
@@ -194,7 +194,7 @@ SOURCEDIRS = . $(PROJECTDIRS) $(CONTIKI_TARGET_DIRS_CONCAT) \
 vpath %.c $(SOURCEDIRS)
 vpath %.S $(SOURCEDIRS)
 
-CFLAGS += ${addprefix -I,$(SOURCEDIRS) $(CONTIKI)}
+override CFLAGS += ${addprefix -I,$(SOURCEDIRS) $(CONTIKI)}
 
 ### Check for a git repo and pass version if found
 ### git.exe in Windows cmd shells may require no stderr redirection
@@ -203,7 +203,7 @@ RELSTR:=${shell git --git-dir ${CONTIKI}/.git describe --tags --always}
 endif
 
 ifneq ($(RELSTR),)
-CFLAGS += -DCONTIKI_VERSION_STRING=\"Contiki-$(RELSTR)\"
+override CFLAGS += -DCONTIKI_VERSION_STRING=\"Contiki-$(RELSTR)\"
 endif
 
 ### Automatic dependency generation
